Working DeepSeek R1 with Open Web UI

--- a/roles/deepseek/templates/local-storage-class.yaml.j2
+++ b/roles/deepseek/templates/local-storage-class.yaml.j2
@@ -2,8 +2,8 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: {{ _ollama.storage_class }}
-  namespace: {{ _ollama.namespace }}
+  name: {{ _deepseek.storage_class }}
+  namespace: {{ _deepseek.namespace }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
