Working DeepSeek R1 with Open Web UI

--- a/roles/deepseek/templates/local-storage-pv.yaml.j2
+++ b/roles/deepseek/templates/local-storage-pv.yaml.j2
@@ -12,7 +12,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Delete # Retain
   storageClassName: {{ _deepseek.storage_class }}
   local:
     path: {{ _deepseek.storage_path }}-{{ n }}
