--- a/roles/deepseek/templates/local-storage-open-webui-pvc.yaml.j2
+++ b/roles/deepseek/templates/local-storage-open-webui-pvc.yaml.j2
@@ -2,19 +2,6 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: open-webui
-  namespace: {{ _deepseek.namespace }}
-spec:
-  storageClassName: {{ _deepseek.storage_class }}
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
   name: open-webui-pipelines
   namespace: {{ _deepseek.namespace }}
 spec:
@@ -37,3 +24,56 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-data-open-webui-redis-master-0
+  namespace: {{ _deepseek.namespace }}
+spec:
+  storageClassName: {{ _deepseek.storage_class }}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-data-open-webui-redis-replicas-0
+  namespace: {{ _deepseek.namespace }}
+spec:
+  storageClassName: {{ _deepseek.storage_class }}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-data-open-webui-redis-replicas-1
+  namespace: {{ _deepseek.namespace }}
+spec:
+  storageClassName: {{ _deepseek.storage_class }}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: redis-data-open-webui-redis-replicas-2
+  namespace: {{ _deepseek.namespace }}
+spec:
+  storageClassName: {{ _deepseek.storage_class }}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+
