--- a/roles/minio/templates/local-storage-pvc.yaml.j2
+++ b/roles/minio/templates/local-storage-pvc.yaml.j2
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-minio-{{ n }}
+  name: export-minio-{{ n }}
   namespace: {{ _minio.namespace }}
 spec:
   storageClassName: {{ _minio.storage_class }}
