Working Distributed MinIO with NGINX Ingress and Local PVC

--- a/roles/minio/templates/local-storage-pvc.yaml.j2
+++ b/roles/minio/templates/local-storage-pvc.yaml.j2
@@ -1,4 +1,4 @@
-{% for n in range(0, _minio.replica|int) %}
+{% for n in range(0, _minio.replica) %}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
