Working DirectPV with ArgoCD

--- a/roles/argocd/templates/argocd-storage-pvc.yaml.j2
+++ b/roles/argocd/templates/argocd-storage-pvc.yaml.j2
@@ -1,8 +1,9 @@
+{% for n in range(0, _argocd.server.replicas ) %}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: argocd-argocd-helm-chrt-proxy
+  name: data-argocd-redis-ha-server-{{ n }}
   namespace: {{ _argocd.namespace }}
 spec:
   storageClassName: {{ _argocd.storage_class }}
@@ -11,16 +12,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgresql-data-argocd-postgresql-0
-  namespace: {{ _argocd.namespace }}
-spec:
-  storageClassName: {{ _argocd.storage_class }}
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+{% endfor %}
+
