--- a/roles/grafana/templates/local-storage-pvc.yaml.j2
+++ b/roles/grafana/templates/local-storage-pvc.yaml.j2
@@ -5,7 +5,11 @@ metadata:
   name: grafana
   namespace: {{ _grafana.namespace }}
 spec:
+{% if _minio.directpv == true %}
+  storageClassName: {{ _grafana.directpv_storage_class }}
+{% else %}
   storageClassName: {{ _grafana.storage_class }}
+{% endif %}
   accessModes:
     - ReadWriteOnce
   resources:
