--- a/roles/minio/templates/local-storage-class.yaml.j2
+++ b/roles/minio/templates/local-storage-class.yaml.j2
@@ -2,8 +2,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: {{ _minio.storage_class }}
-  namespace: {{ _minio.namespace }}
+{% if _minio.directpv == true %}
+  name: {{ _minio.persistence.directpv_storage_class }}
+{% else %}
+  name: {{ _minio.persistence.storage_class }}
+{% endif %}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
