--- a/roles/prometheus/templates/local-storage-class.yaml.j2
+++ b/roles/prometheus/templates/local-storage-class.yaml.j2
@@ -2,8 +2,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
+{% if _prometheus.directpv == true %}
+  name: {{ _prometheus.directpv_storage_class }}
+{% else %}
   name: {{ _prometheus.storage_class }}
-  namespace: {{ _prometheus.namespace }}
+{% endif %}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
-
