--- a/roles/minio/templates/minio-console-ingress-class.yaml.j2
+++ b/roles/minio/templates/minio-console-ingress-class.yaml.j2
@@ -4,8 +4,8 @@ kind: IngressClass
 metadata:
   labels:
     app.kubernetes.io/component: controller
-  name: {{ _nginx.ingress.prometheus.class_name }}
-  namespace: {{ _prometheus.namespace }}
+  name: {{ _nginx.ingress.console.class_name }}
+  namespace: {{ _minio.namespace }}
 spec:
   controller: k8s.io/ingress-nginx
 
